[project]
name = "biolink-to-text"
version = "0.1.0"
description = "Inter-convert Biolink Model KG triples/paths and natural language text"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "bmt>=1.4.0",
    "ipykernel>=7.3.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biolink_to_text"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
